--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,233 @@
-/*HELLO*/
-body {
-  font-family: "Yeseva One", cursive;
-}
-
-h1 {
+/*imports*/
+header h1 {
   padding-top: 30px;
   padding-left: 30px;
   color: #660000;
   height: 200px;
   font-size: 100pt;
   border-bottom: #660000 solid;
+  background-color: white;
+}
+@media screen and (max-width: 810px) {
+  header h1 {
+    font-size: 40pt;
+  }
+}
+header .navbar {
+  margin-top: 20px;
+}
+header .navbar div {
+  background-color: white;
+}
+header .navbar div ul li {
+  list-style: none;
+  color: black;
+}
+header .navbar div ul li .nav-link {
+  color: black;
+  font-size: 20pt;
 }
 
 * {
   margin: 0px;
   padding: 0px;
+}
+
+/* Type de la pagina */
+body {
+  font-family: "Yeseva One", cursive;
+}
+
+/* type desde folder */
+@font-face {
+  font-family: "Durer";
+  src: url(../font/Durer.ttf);
+}
+section .picturecoverindex {
+  margin-bottom: 20px;
+}
+
+section div marquee {
+  font-size: 80pt;
+  border: 2px #660000 solid;
+}
+@media screen and (max-width: 810px) {
+  section div marquee {
+    font-size: 40pt;
+  }
+}
+
+footer {
+  margin: 0px;
+  height: 200px;
+  background: rgb(250, 247, 247);
+  background: linear-gradient(180deg, rgb(250, 247, 247) 0%, rgba(102, 0, 0, 0.7091036244) 64%);
+}
+footer div img {
+  width: 30px;
+}
+footer div .col {
+  padding: 20px;
+}
+footer div p {
+  font-family: "Mukta Malar", sans-serif;
+  color: white;
+  padding-top: 70px;
+}
+@media screen and (max-width: 560px) {
+  footer div p {
+    font-size: 8pt;
+  }
+}
+
+.about-section {
+  padding: 50px;
+  margin: 10px;
+  text-align: justify;
+  background-color: rgba(204, 204, 204, 0.4117647059);
+  border-radius: 5%;
+  color: #660000;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+}
+.about-section .infotext {
+  font-family: "Mukta Malar", sans-serif;
+  padding: 10px;
+  font-size: 20px;
+  /*mobile responsive info*/
+}
+.about-section .infotext .mainline {
+  font-family: "Durer", sans-serif;
+  padding: 10px;
+  font-size: 30px;
+}
+@media screen and (max-width: 560px) {
+  .about-section .infotext {
+    font-size: 10pt;
+  }
+}
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-20px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+}
+.about-section .containerfoto {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.about-section img {
+  width: 400px;
+  box-sizing: border-box;
+  border: 5px #660000 solid;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+  transform: translatey(0px);
+  animation: float 6s ease-in-out infinite;
+}
+@media screen and (max-width: 810px) {
+  .about-section {
+    font-size: 8pt;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+section .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+section .column {
+  flex: 25%;
+  max-width: 33.3%;
+  padding: 0 4px 4px 8px;
+}
+section .column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  filter: brightness(0.5);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+@media screen and (max-width: 600px) {
+  section .column img {
+    filter: grayscale(0) brightness(1);
+  }
+}
+section .column:hover {
+  filter: grayscale(0);
+}
+@media screen and (max-width: 800px) {
+  section .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+@media screen and (max-width: 600px) {
+  section .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+  section .column img {
+    filter: grayscale(0) brightness(1);
+  }
+}
+@media screen and (max-width: 600px) {
+  section .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+  section .column img {
+    filter: grayscale(0) brightness(1);
+  }
+}
+
+section #tiendawrap {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+section #tiendawrap2 {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+section ul li .storesubcontent a {
+  text-decoration: none;
+  color: black;
+  margin: 12px;
+  font-size: 25pt;
+}
+section ul .storesubcontent {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  padding: 35px;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+}
+section .card {
+  border: 2px #660000 solid;
+}
+section .btn {
+  background-color: #660000;
 }
 
 /*# sourceMappingURL=style.css.map */
