--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,10 +1,57 @@
-h1 {
 
-    padding-top: 30px;
-    padding-left: 30px;
-    color: #660000;
-    height: 200px;
-    font-size: 100pt;
-    border-bottom: #660000 solid;
+header {
+
+    h1 {
+
+        padding-top: 30px;
+        padding-left: 30px;
+        color: #660000;
+        height: 200px;
+        font-size: 100pt;
+        border-bottom: #660000 solid;
+        background-color: white;
+
+        @media screen and (max-width: 810px) {
+
+            font-size: 40pt;
+        }
+
+    }
+
+    .navbar {
+
+        margin-top: 20px;
+
+        div {
+
+            background-color: white;
+
+            ul {
+
+                li {
+
+                    .nav-link {
+
+                        color: black;
+                        font-size: 20pt;
+                    }
+
+                    list-style: none;
+                    color: black;
+
+
+                }
+
+
+
+
+            }
+
+        }
+
+
+    }
+
+
 
 }
