--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,1 +1,64 @@
 
+
+
+section {
+
+
+    .bloquecontact {
+
+        background: rgb(250, 247, 247);
+        background: linear-gradient(180deg, rgba(250, 247, 247, 1) 0%, rgba(102, 0, 0, 0.7091036243599003) 64%);
+        padding: 20px;
+    
+    }
+    
+    .enviarbt {
+    
+        margin-bottom: 50px;
+    }
+    
+    h2 {
+    
+        padding-top: 40px;
+        color: #660000;
+    
+    }
+
+
+    p {
+
+        .text-center {
+    
+            color: #660000;
+            font-size: 20px;
+            font-family: 'Durer', sans-serif;
+        }
+
+
+    }
+
+    ul {
+
+        li {
+
+            
+        #contact-form {
+            color: white;
+        }
+        
+        .dataform {
+            color: #660000;
+        }
+
+
+        }
+
+
+
+
+    }
+    
+
+
+}
+
