--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,11 +1,10 @@
-
 section {
 
 
     .picturecoverindex {
 
         margin-bottom: 20px;
-    
+
     }
 
 
@@ -18,21 +17,19 @@ section {
 
     div {
 
-        
-marquee {
 
-    font-size: 80pt;
-    border: 2px #660000 solid;
+        marquee {
 
-    @media screen and (max-width: 810px) {
+            font-size: 80pt;
+            border-top: 2px #660000 solid;
 
-        font-size: 40pt;
+            @media screen and (max-width: 810px) {
+
+                font-size: 40pt;
+            }
+
+        }
+
+
     }
-
 }
-
-
-    }
-}
-
-
