--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 
 @import 'base/estilosgenerales';
 
+
 @import 'components/index';
 
 @import 'components/footer';
@@ -16,4 +17,8 @@
 @import 'components/tienda';
 
 @import 'components/contacto';
+
+@import 'components/print';
+
+@import 'components/compras';
 
