--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,13 +1,15 @@
 
+@import '../base/variable';
+
 header {
 
     h1 {
 
         padding-top: 30px;
         padding-left: 30px;
-        color: #660000;
+        color: $text-color-general;
         height: 200px;
-        font-size: 100pt;
+        font-size: $header-text-size;
         border-bottom: #660000 solid;
         background-color: white;
 
