--- a/scss/components/_print.scss
+++ b/scss/components/_print.scss
@@ -1,23 +1,17 @@
 
 
+@import '../base/extend';
+
 section {
 
     div {
 
-        #tiendawrap {
+        .tiendawrapprint{
 
-            display: flex;
-            flex-wrap: wrap;
-            padding: 0 4px;
-        
-        }
-        
-        #tiendawrap2 {
-        
-            display: flex;
-            flex-wrap: wrap;
-            padding: 0 4px;
-        
+            @extend %gridtiendageneral;
+
+
+
         }
     }
 
