--- a/scss/components/_tienda.scss
+++ b/scss/components/_tienda.scss
@@ -1,21 +1,17 @@
+
+@import '../base/extend';
+
+
 section {
 
 
-    #tiendawrap {
+    .tiendawrapimagenes {
 
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0 4px;
+        @extend %gridtiendageneral;
 
     }
 
-    #tiendawrap2 {
-
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0 4px;
-
-    }
+   
 
     ul {
 
