--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,5 +1,5 @@
 
-
+@import '../base/extend';
 
 section {
 
@@ -60,6 +60,12 @@ section {
 
 
 
+
+    }
+
+    .suscripcion {
+
+        @extend %suscripcioncuadro;
 
     }
     
