--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -22,6 +22,8 @@
 
 %suscripcioncuadro {
 
+   
+
     .content {
         max-width: 650px;
         width: auto;
@@ -29,6 +31,8 @@
         text-align: center;
         position: relative;
         z-index: 2;
+        margin-top: 100px;
+        margin-bottom: 50px;
     }
 
     h2 {
