--- a/scss/components/_obraproyectos.scss
+++ b/scss/components/_obraproyectos.scss
@@ -6,17 +6,22 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-top: 100px;
   }
   
   .obraimage {
     background-color: white;
     padding: 10px;
     flex: 50%;
+    
 
     img{
 
         width: 600px;
+        box-shadow: 10px 10px 20px 20px rgba(128, 128, 128, 0.493);
+        
     }
+    
   }
   
   .obratext {
@@ -24,6 +29,7 @@
     padding: 10px;
     flex: 50%;
     font-size: 16pt;
+    margin-top: 20px;
 
     @media screen and (max-width: 810px) {
 
