agregue dos elementos base en import style scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,5 +24,9 @@
 
 @import 'base/extend';
 
-@import 'components/obraproyectos'
+@import 'components/obraproyectos';
+
+@import 'base/listas';
+
+@import 'base/variable';
 
