--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,3 @@
-
 @import '../base/variable';
 
 header {
@@ -7,11 +6,26 @@ header {
 
         padding-top: 30px;
         padding-left: 30px;
-        color: $text-color-general;
+
         height: 200px;
         font-size: $header-text-size;
         border-bottom: #660000 solid;
         background-color: white;
+
+        a {
+
+            text-decoration: none;
+            color: $text-color-general;
+            &:hover {
+                color: rgb(243, 21, 21);
+            }
+
+
+
+        }
+
+        
+
 
         @media screen and (max-width: 810px) {
 
